Use --add-opens